# mazerunner

./: CMakeLists.txt  common.h  ds_for_search.h  main.cxx  makefile  maze.cxx  maze.h  maze1.txt  maze3.txt  maze4.txt  maze5.txt  mazerunner  mazerunner.cxx  my_solution.cxx  my_solution.h  player.h  readme.txt
vyatsuta_4/: README.txt  YatsutaVladyslav_vjy5021.cxx  YatsutaVladyslav_vjy5021.h  ds_for_search.cpp  ds_for_search.h
